[package]
name = "ab3dmot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.17"
text_io = "0.1.9"
num_enum = "0.5.4"
nalgebra = "0.29.0"
geo = "0.18.0"
geo-clipper = "0.7.0"
itertools = "0.10.1"
pathfinding = "2.2.2"
ordered-float = "2.8.0"
adskalman = "0.12.0"
derivative = "2.2.0"
uuid = { version = "0.8", features = ["v4"] }
names = "0.12.0"
strum = "0.22.0"
strum_macros = "0.22"
derive_more = "0.99.16"
lazy_static = "1.4.0"
once_cell = "1.8.0"
mot_data = {path = "../mot_data"}